--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.1",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1",
+    "tesseract.js": "^4.1.1",
     "tiny-slider-react": "^0.5.7",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5"
