--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flowswitch",
   "version": "1.1.0",
   "private": true,
-  "homepage": "https://www.flowswitchapi.com/",
+  "homepage": "https://merchant.flowswitchapi.com/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "ag-grid-react": "^34.1.0",
