--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.1",
